--- a/src/css/main.css
+++ b/src/css/main.css
@@ -59,6 +59,86 @@
 }
 
 /* Begin styling the report items here! */
-.reports {
 
+*{
+  font-family: 'Roboto', sans-serif;
+  background-color: #2b3034;
+}
+
+.reports {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  column-gap: 30px;
+}
+
+h1{
+  color: white;
+  font-size: 50px;
+  background:#23272a;
+  padding: 20px;
+}
+
+.reports_docs{
+  background: #23272a;
+  text-transform: uppercase;
+  color: white;
+  text-align: center;
+}
+
+.reports_docs a{
+  color: white;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.reports_title{
+  background: #23272a;
+}
+
+.reports_item img{
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+.layout_container{
+  display: flex;
+  justify-items: center;
+}
+
+article.reports_item{
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
+  padding-bottom: 30px;
+}
+
+h3.reports_title {
+  margin: 0;
+}
+
+article footer{
+  padding: 13px;
+  margin-top: 13px;
+  border-radius: 5%;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+
+/* media queries */
+@media (max-width: 768px) {
+
+  .reports {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 30px;
+  }
+
+}
+
+/* Landscape phones and down */
+@media (max-width: 480px) {
+
+  .reports {
+    display: grid;
+    grid-template-columns: 100%;
+
+  }
 }
